[package]
name = "gpu_layout"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Share host types with GPU shaders, with various layout specifications"
repository = "https://github.com/ambrosia13/gpu_layout"
readme = "../README.md"

[dependencies]
glam = { version = "~0.30", features = ["bytemuck"] }
bytemuck = "~1"

gpu_layout_derive = "0.2.0"